flux-system/flux-webhook/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
spec:
  rules:
    - host: flux-webhook.wrenspace.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - flux-webhook.wrenspace.dev
      secretName: flux-webhook-tls
